# COUP

./: DEPLOYMENT_DETAILS.md  PROJECT_PLAN.md  coup_game_details.txt  start_command.txt
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  frontend.instructions.md
.github/skills/backend-feature-workflow/: SKILL.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start-dev.ps1  stop-dev.ps1
backend/app/: config.py  container.py  main.py
backend/app/api/: game_router.py  health_router.py  lobby_router.py  router.py
backend/app/engine/: action_handler.py  block_handler.py  challenge_handler.py  deck.py  game_engine.py
backend/app/entities/: base.py  game_entity.py  game_event_entity.py  player_entity.py
backend/app/models/: action.py  card.py  game.py  lobby.py  player.py  websocket_message.py
backend/app/repositories/: base.py  game_repository.py  player_repository.py
backend/app/services/: bot_logic.py  game_service.py  lobby_service.py
backend/app/ws/: connection_manager.py  game_ws_handler.py
backend/tests/: conftest.py
backend/tests/integration/: test_lobby_api.py
backend/tests/unit/: test_game_service.py  test_lobby_service.py  test_websocket_reconnect.py
backend/tests/unit/engine/: test_action_handler.py  test_block_handler.py  test_challenge_handler.py  test_deck.py  test_game_engine.py
backend/tests/unit/models/: test_models.py
docs/: BOT_LOGIC_DEEP_DIVE.md
frontend/: .env.local.example  .gitignore  README.md  next.config.js  package.json  vitest.config.ts
(+134 files in other folders)
